--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,11 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  /* background-image: url("/DayBg-pic.png"); */
+  /* background-image: url("/NightBg-pic.png"); */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
